created the leaflet map

--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,20 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Frontend Mentor | IP Address Tracker</title>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- leaflet links 🐛-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <!-- IP Address Tracker
-
-      Search for any IP address or domain
-    
-      IP Address
-      Location
-      Timezone
-        UTC 
+      <!-- 
       ISP -->
       
       <!-- <div class="attribution">
